<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.isaacparker.dozesettingseditor.MainActivity">

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_info_black_24dp"
        android:orderInCategory="1"
        android:title="@string/action_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:orderInCategory="2"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_as_profile"
        android:orderInCategory="3"
        android:title="@string/action_save_as_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restoredefault"
        android:orderInCategory="99"
        android:title="@string/action_restoredefault"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
